Fixes example code box to scrollable so word wrap doesn't mess up the code

--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ h4 {
   font-family: "Roboto-Mono", monaco, monospace;
   font-size: 0.8rem;
   padding: 1rem;
-  white-space: pre-wrap;
+  overflow: auto;
 }
 
 .code-example strong {
